# jpg2-inequality

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  fft.cpp  fft.h  gray2ifft.cpp  ifft2gray.cpp  ifft2inequality.cpp  ignore_condition.h  jpg2gray.cpp  makefile  test.fft  test.gray
