cmake_minimum_required(VERSION 3.10)
project(jpg2inequality)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(JPEG REQUIRED)
if (JPEG_FOUND)
	message(STATUS "Found JPEG: ${JPEG_INCLUDE_DIRS}")
	message(STATUS "Found JPEG: ${JPEG_LIBRARIES}")
	include_directories(${JPEG_INCLUDE_DIRS})
else()
	message(FATAL_ERROR "JPEG not found")
endif()
add_executable(jpg2gray jpg2gray.cpp)
target_link_libraries(jpg2gray ${JPEG_LIBRARIES})
add_executable(gray2ifft gray2ifft.cpp fft.cpp)
add_executable(ifft2gray ifft2gray.cpp fft.cpp)
target_link_libraries(ifft2gray ${JPEG_LIBRARIES})
add_executable(ifft2inequality ifft2inequality.cpp)
